@@ -408,6 +408,9 @@ Library
 Tests
 -----
 
+- Issue #16910: test_bytes, test_unicode, and test_userstring now work with
+  unittest test discovery.  Patch by Zachary Ware.
+
 - Issue #16905: test_warnings now works with unittest test discovery.
   Initial patch by Berker Peksag.
 
